<resources>
    <string name="app_name">Swish</string>
    <string name="title_activity_thread">ThreadActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="rnba">/r/NBA</string>
    <string name="points">%1$s points</string>
    <string name="noThreadFound">No thread found...</string>
    <string name="no_games_scheduled">No games scheduled</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="retry">Retry</string>
    <string name="failed_game_data">Could not load game data</string>
    <string name="failed_standings_data">Could not load standings</string>
    <string name="failed_profile_data">Could not load your contributions</string>
    <string name="failed_comments_data">Could not load comments</string>
    <string name="mute_game">Mute this game</string>
    <string name="no_comments_found">No comments found</string>
    <string name="saved">Saved</string>
    <string name="unsaved">Unsaved</string>
    <string name="speaking_as">Speaking as: %1$s</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="not_logged_in">You must first log in</string>
    <string name="saving_failed">Saving failed</string>
    <string name="reply">Reply</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="cannot_play_video">Could not load video</string>
    <string name="content_not_available">Content not available</string>
    <string name="no_highlights_to_show">No highlights to show</string>
    <string name="error_loading_highlights">Error loading highlights: %1$d</string>
    <string name="error_loading_streamable">Error loading streamable</string>
    <string name="purchase_complete">Premium features are now available!</string>
    <string name="unknown_error">An unexpected error occurred</string>
    <string name="action_refresh">Refresh</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="games_fragment_title">Games</string>
    <string name="standings_fragment_title">Standings</string>
    <string name="reddit_nba_fragment_title">/r/NBA</string>
    <string name="highlights_fragment_title">Highlights</string>
    <string name="today_string">Today</string>
    <string name="not_logged">Not logged In</string>
    <string name="saving">Saving</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="type_comment">Type a coment</string>
    <string name="empty"></string>
    <string name="reply_saved">Reply saved</string>
    <string name="reply_error">Error saving reply</string>
    <string name="failed_load_comments">Failed to load comments</string>
    <string name="no_comments_available">No comments to show</string>
    <string name="no_thread_made">No thread has been made for this game</string>
    <string name="game_thread">Live</string>
    <string name="box_score">Box Score</string>
    <string name="post_game_thread">Post-Game</string>
    <string name="failed_to_save_comment">Could not save comment</string>
    <string name="reply_to_sub_saved">Reply saved</string>
    <string name="reply_to_sub_failed">Could not save reply</string>
    <string name="box_score_not_available">Box score not available</string>
    <string name="failed_to_load_box_score">Failed to load box score</string>
    <string name="western_conference">Western Conference</string>
    <string name="eastern_conference">Eastern Conference</string>
    <string name="team">Team</string>
    <string name="wins_abbrev">W</string>
    <string name="losses_abbrev">L</string>
    <string name="pct_abbrev">%</string>
    <string name="gb_abbrev">GB</string>
    <string name="share_video">Share video</string>
    <string name="sort_new">New</string>
    <string name="sort_top_day">Top - Day</string>
    <string name="sort_top_week">Top - Week</string>
    <string name="sort_top_season">Top - Season</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="not_authenticated">Not authenticated</string>
    <string name="posts_loading_failed">Failed to load posts</string>
    <string name="save">Save</string>
    <string name="subscriber_count">%1$s subscribers • %2$s fans online</string>
    <string name="action_sort">Sort</string>
    <string name="action_sort_top">Top</string>
    <string name="action_sort_hot">Hot</string>
    <string name="action_sort_new">New</string>
    <string name="action_sort_old">Old</string>
    <string name="action_sort_rising">Rising</string>
    <string name="action_sort_controversial">Controversial</string>
    <string name="action_sort_top_hour">Hour</string>
    <string name="action_sort_top_day">Day</string>
    <string name="action_sort_top_week">Week</string>
    <string name="action_sort_top_month">Month</string>
    <string name="action_sort_top_year">Year</string>
    <string name="action_sort_top_all">All</string>
    <string name="change_view">Change View</string>
    <string name="card_view">Card View</string>
    <string name="card_view_description">Larger HD images, uses more data</string>
    <string name="list_view">List View</string>
    <string name="list_view_description">Smaller thumbnails, uses less data</string>
    <string name="num_points">%1$d points</string>
    <string name="num_comments">%1$d comments</string>
    <string name="posted_details">Posted %1$s by %2$s via %3$s</string>
    <string name="just_now">just now</string>
    <string name="minutes_ago">%1$d minutes ago</string>
    <string name="hours_ago">%1$d hours ago</string>
    <string name="days_ago">%1$d days ago</string>
    <string name="share_this_link">Share this link</string>
    <string name="profile">Profile</string>
    <string name="rnba_shortcut_short_label">NBA</string>
    <string name="rnba_shortcut_long_label">NBA</string>
    <string name="highlights_shortcut_short_label">Highlights</string>
    <string name="highlights_shortcut_long_label">Highlights</string>
    <string name="your_comment">Your comment</string>
    <string name="add_comment">Add comment</string>
    <string name="post">Post</string>
    <string name="reply_is_empty">Reply is empty</string>
    <string name="add_link">Add link</string>
    <string name="text">Text</string>
    <string name="link">Link</string>
    <string name="title_activity_submission">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="reddit">Reddit</string>
    <string name="log_out">Log out</string>
    <string name="log_in">Log in</string>
    <string name="click_login">Click to log in</string>
    <string name="logged_as_user">Logged in as %1$s</string>
    <string name="pref_enable_alerts">Enable Alerts</string>
    <string name="pref_enable_youtube_in_app">In-app Player for YouTube</string>
    <string name="pref_no_spoilers_mode">Hide Scores</string>
    <string name="pref_open_box_score_default">Open Box Score by Default</string>
    <string name="pref_dark_theme">Dark Theme</string>
    <string name="title_settings_cga">Close Game</string>
    <string name="dialog_settings_cga">Pick teams to follow</string>
    <string name="summary_settings_cga">Receive an alert for close games</string>
    <string name="key_settings_cga">pref_cga_topics</string>
    <string name="key_enable_youtube_in_app">in_app_youtube</string>
    <string name="key_open_box_score_default">open_box_score_default</string>
    <string name="key_no_spoilers_mode">no_spoilers_mode</string>
    <string name="key_enable_alerts">pref_enable_alerts</string>
    <string name="key_chips_for_rnba_originals">chips_for_rnba_originals</string>
    <string name="key_triple_double_alert">triple_double_alert</string>
    <string name="key_quadruple_double_alert">quadruple_double_alert</string>
    <string name="key_5x5_alert">five_x_five_alert</string>
    <string name="key_dark_theme">dark_theme</string>
    <string name="title_settings_start">Game Starting</string>
    <string name="dialog_settings_start">Pick teams to receive alerts</string>
    <string name="summary_settings_start">Receive an alert before a game starts</string>
    <string name="title_settings_halftime">Halftime Score</string>
    <string name="dialog_settings_halftime">Pick teams to receive alerts</string>
    <string name="summary_settings_halftime">Receive a score update at halftime</string>
    <string name="title_settings_end_of_game">End of Game</string>
    <string name="dialog_settings_end_of_game">Pick teams to receive alerts</string>
    <string name="summary_settings_end_of_game">Receive an alert with the final score</string>
    <string name="key_settings_start">pref_start_topics</string>
    <string name="key_settings_halftime">pref_halftime_topics</string>
    <string name="key_settings_end_of_game">pref_end_of_game_topics</string>
    <string name="pref_startup_fragment_title">Startup Page</string>
    <string-array name="pref_startup_fragment_entries">
        <item>Games</item>
        <item>r/NBA</item>
        <item>Highlights</item>
    </string-array>
    <string-array name="pref_startup_fragment_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_startup_fragment_def_value">0</string>
    <string name="r_atl">AtlantaHawks</string>
    <string name="r_bkn">GoNets</string>
    <string name="r_bos">BostonCeltics</string>
    <string name="r_cha">CharlotteHornets</string>
    <string name="r_chi">ChicagoBulls</string>
    <string name="r_cle">ClevelandCavs</string>
    <string name="r_dal">Mavericks</string>
    <string name="r_den">DenverNuggets</string>
    <string name="r_det">DetroitPistons</string>
    <string name="r_gsw">Warriors</string>
    <string name="r_hou">Rockets</string>
    <string name="r_ind">Pacers</string>
    <string name="r_lac">LAClippers</string>
    <string name="r_lal">Lakers</string>
    <string name="r_mem">MemphisGrizzlies</string>
    <string name="r_mia">Heat</string>
    <string name="r_mil">MkeBucks</string>
    <string name="r_min">Timberwolves</string>
    <string name="r_nop">NOLAPelicans</string>
    <string name="r_nyk">NYKnicks</string>
    <string name="r_okc">Thunder</string>
    <string name="r_orl">OrlandoMagic</string>
    <string name="r_phi">Sixers</string>
    <string name="r_pho">Suns</string>
    <string name="r_por">RipCity</string>
    <string name="r_sac">Kings</string>
    <string name="r_sas">NBASpurs</string>
    <string name="r_tor">TorontoRaptors</string>
    <string name="r_uta">UtahJazz</string>
    <string name="r_was">WashingtonWizards</string>
    <string name="swish_multi">SwishMulti</string>
    <string-array name="pref_teams_list_titles">
        <item>No team</item>
        <item>Atlanta</item>
        <item>Brooklyn</item>
        <item>Boston</item>
        <item>Charlotte</item>
        <item>Chicago</item>
        <item>Cleveland</item>
        <item>Dallas</item>
        <item>Denver</item>
        <item>Detroit</item>
        <item>Golden State</item>
        <item>Houston</item>
        <item>Indiana</item>
        <item>Los Angeles C</item>
        <item>Los Angeles L</item>
        <item>Memphis</item>
        <item>Miami</item>
        <item>Milwaukee</item>
        <item>Minnesota</item>
        <item>New Orleans</item>
        <item>New York</item>
        <item>Oklahoma City</item>
        <item>Orlando</item>
        <item>Philadelphia</item>
        <item>Phoenix</item>
        <item>Portland</item>
        <item>Sacramento</item>
        <item>San Antonio</item>
        <item>Toronto</item>
        <item>Utah</item>
        <item>Washington</item>
    </string-array>
    <string name="go_premium">Go Premium!</string>
</resources>