<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="general_category"
        android:title="General">

        <ListPreference
            android:entries="@array/pref_teams_list_titles"
            android:entryValues="@array/pref_teams_list_values"
            android:key="teams_list"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="Favorite Team"/>

        <ListPreference
            android:defaultValue="@string/pref_startup_fragment_def_value"
            android:entries="@array/pref_startup_fragment_entries"
            android:entryValues="@array/pref_startup_fragment_values"
            android:key="key_startup_fragment"
            android:title="@string/pref_startup_fragment_title"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="notifications_category"
        android:title="@string/notifications">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_enable_alerts"
            android:title="@string/pref_enable_alerts"/>

        <MultiSelectListPreference
            android:defaultValue="@array/pref_cga_values_def"
            android:dialogTitle="@string/dialog_settings_cga"
            android:entries="@array/pref_cga_titles"
            android:entryValues="@array/pref_cga_values"
            android:key="@string/key_settings_cga"
            android:summary="@string/summary_settings_cga"
            android:title="@string/title_settings_cga"/>

        <MultiSelectListPreference
            android:defaultValue="@array/pref_start_values_def"
            android:dialogTitle="@string/dialog_settings_start"
            android:entries="@array/pref_start_titles"
            android:entryValues="@array/pref_start_values"
            android:key="@string/key_settings_start"
            android:summary="@string/summary_settings_start"
            android:title="@string/title_settings_start"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:key="reddit_category"
        android:title="@string/reddit">

        <Preference
            android:key="log_in_status_pref"
            android:title="@string/log_out"/>

    </PreferenceCategory>

</PreferenceScreen>
