<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort"
        android:orderInCategory="101"
        android:title="@string/action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        app:showAsAction="ifRoom" >

        <menu>

            <item
                android:id="@+id/action_sort_top"
                android:orderInCategory="10"
                android:title="@string/action_sort_top"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_hot"
                android:orderInCategory="11"
                android:title="@string/action_sort_hot"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_new"
                android:orderInCategory="12"
                android:title="@string/action_sort_new"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_old"
                android:orderInCategory="13"
                android:title="@string/action_sort_old"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_sort_controversial"
                android:orderInCategory="14"
                android:title="@string/action_sort_controversial"
                app:showAsAction="never" />

        </menu>
    </item>

</menu>