<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <TextView
        android:id="@+id/text_conference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eastern_conference"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/primaryText"
        android:layout_margin="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="5dp">

        <TextView
            android:id="@+id/text_team"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/team"
            android:textSize="12sp"
            android:textColor="@color/secondaryText"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/text_wins"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/wins_abbrev"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/secondaryText"/>

        <TextView
            android:id="@+id/text_losses"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/losses_abbrev"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/secondaryText"/>

        <TextView
            android:id="@+id/text_pct"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/pct_abbrev"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/secondaryText"/>

        <TextView
            android:id="@+id/text_gb"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/gb_abbrev"
            android:textSize="12sp"
            android:textAlignment="center"
            android:textColor="@color/secondaryText"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorDivider" />

</LinearLayout>